# fastmcp

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CODE_STRUCTURE_REPORT.md  LICENSE  README.md  Windows_Notes.md  justfile  pyproject.toml  sample.py  test.py
.cursor/rules/: core-mcp-objects.mdc
.github/: ai-labeler.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  enhancement.yml
.github/workflows/: ai-labeler.yml  claude.yaml  publish.yml  run-integration-tests.yml  run-static.yml  run-tests.yml
docs/: docs.json  style.css
docs/clients/: advanced-features.mdx  client.mdx  overview.mdx  transports.mdx
docs/deployment/: asgi.mdx  authentication.mdx  cli.mdx  running-server.mdx
docs/getting-started/: installation.mdx  quickstart.mdx  welcome.mdx
docs/patterns/: composition.mdx  contrib.mdx  decorating-methods.mdx  fastapi.mdx  http-requests.mdx  openapi.mdx  proxy.mdx  proxying.mdx  testing.mdx
docs/servers/: composition.mdx  context.mdx  fastmcp.mdx  prompts.mdx  proxy.mdx  resources.mdx  resources_backup.mdx  tools.mdx
docs/snippets/: version-badge.mdx
examples/: complex_inputs.py  desktop.py  echo.py  fastapi_converter.py  in_memory_proxy_example.py  memory.py  modular_app.py  mount_example.py  readme-quickstart.py  sampling.py  screenshot.py  serializer.py  simple_echo.py  text_me.py  weather.py
examples/smart_home/: README.md  pyproject.toml
examples/smart_home/src/smart_home/: __init__.py  __main__.py  hub.py  settings.py
examples/smart_home/src/smart_home/lights/: hue_utils.py  server.py
integration_tests/: test_repro_518_output.py
src/contrib/: README.md
src/contrib/bulk_tool_caller/: bulk_tool_caller.py  example.py
src/contrib/mcp_mixin/: README.md  example.py
src/fastmcp/: __init__.py  _version.py  cli.py  exceptions.py  models.py  resources.py  server.py  settings.py  tools.py  types.py
src/fastmcp/cli/: __init__.py  claude.py  cli.py
src/fastmcp/client/: __init__.py  base.py  client.py  logging.py  mcp_config.py  memory.py  sse.py  stdio.py  transports.py  websocket.py
src/fastmcp/clients/: __init__.py  base.py  fastmcp_client.py  sse.py  stdio.py  websocket.py
src/fastmcp/low_level/: README.md  sse_server_transport.py
src/fastmcp/prompts/: __init__.py  base.py  manager.py  prompt.py  prompt_manager.py
src/fastmcp/resources/: __init__.py  base.py  manager.py  resource.py  resource_manager.py  template.py  templates.py  types.py
src/fastmcp/server/: context.py  dependencies.py  http.py  openapi.py  proxy.py  server.py
src/fastmcp/tools/: base.py  tool.py  tool_manager.py
src/fastmcp/utilities/: __init__.py  cache.py  exceptions.py  func_metadata.py  http.py  json_schema.py  logging.py  mcp_config.py  openapi.py  registerable.py  tests.py  types.py
tests/: test_cli.py  test_deprecated.py  test_examples.py  test_func_metadata.py  test_resource_manager.py  test_server.py  test_tool_manager.py
tests/cli/: test_cli.py  test_run.py
tests/client/: test_client.py  test_fastmcp_transport.py  test_logs.py  test_memory_client.py  test_progress.py  test_roots.py  test_sampling.py  test_sse.py  test_streamable_http.py
tests/clients/: test_fastmcp_client.py
tests/contrib/: test_bulk_tool_caller.py  test_mcp_mixin.py
tests/deprecated/: test_deprecated.py  test_mount_separators.py  test_resource_prefixes.py
tests/prompts/: test_base.py  test_manager.py  test_prompt.py  test_prompt_manager.py
tests/resources/: test_file_resources.py  test_function_resources.py  test_resource_manager.py  test_resource_template.py  test_resources.py
tests/server/: test_app_state.py  test_auth_integration.py  test_context.py  test_file_server.py  test_http_dependencies.py  test_http_middleware.py  test_import_server.py  test_lifespan.py  test_logging.py  test_mount.py  test_openapi.py  test_openapi_array_params.py  test_openapi_path_parameters.py  test_proxy.py  test_resource_prefix_formats.py  test_run_server.py  test_server.py  test_server_interactions.py  test_tool_annotations.py
tests/server/http/: test_custom_routes.py  test_http_dependencies.py  test_http_middleware.py
tests/server/test_servers/: sse.py  stdio.py
tests/servers/: test_file_browser.py  test_file_resources.py  test_file_server.py
tests/test_servers/: fastmcp_server.py
tests/tools/: test_tool.py  test_tool_manager.py  tool_manager.py
tests/utilities/: __init__.py  test_cache.py  test_decorated_function.py  test_func_metadata.py  test_json_schema.py  test_logging.py  test_mcp_config.py  test_tests.py  test_typeadapter.py  test_types.py
tests/utilities/openapi/: __init__.py  test_openapi.py  test_openapi_advanced.py  test_openapi_fastapi.py
